2003-03-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?GENERIC?%EXT%.obj)
	(?GENERIC?%EXT%.lo): Use `mv -f' instead of `mv' in FASTDEP mode.
	Suggested by Matthias Andree.

	* tests/README: Typo.

2003-03-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Requirements) <AC_CONFIG_FILES>: Files listed
	with AC_CONFIG_FILES are cleaned by `make distclean'.  Don't
	pretend otherwise.
	Reported by Rafael Laboissiere.

2003-03-04  Andreas Buening  <andreas.buening@nexgo.de>

	* lib/mdate-sh: Find out which column of the ls -l output contains
	the month. Do not assume it is at least the fifth column.

2003-02-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Emacs Lisp): Mention that `dist_' can be used.

	* automake.in (handle_emacs_lisp): Don't build *.elc files
	if ELCFILES was set empty.
	* tests/lisp4.test: New file.
	* tests/Makefile.am (TESTS): Add lisp4.test.
	Reported by Simon Josefsson.

	* tests/lex3.test, tests/lex5.test: Require flex.
	Reported by Leo Davis.

2003-02-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (read_am_file): Catch trailing backslashes on last line.
	* tests/backsl3.test: New file.
	* tests/Makefile.am (TESTS): Add backsl3.test.
	Reported by Akim Demaille.

2003-02-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): Fix typos and other errors reported by Karl
	Berry.

2003-02-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.3a.

	* configure.in, NEWS: Bump version to 1.7.3.

	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Use $(...)
	instead of ${...}.

	* tests/defs.in: Handle required=ro-dir.
	* tests/destdir.test: Use this.

2003-02-19  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/am/distdir.am (distcheck): Strip any leading DOS drive
	from dc_install_base.

2003-02-19  Alexandre Duret-Lutz  <adl@gnu.org>
