@@ -154,6 +154,7 @@ Nyul Laszlo		nyul@sol.cc.u-szeged.hu
 OKUJI Yoshinori		okuji@kuicr.kyoto-u.ac.jp
 Olivier Louchart-Fletcher olivier@zipworld.com.au
 Olly Betts		olly@muscat.co.uk
+Owen Taylor		otaylor@redhat.com
 Patrick Welche		prlw1@newn.cam.ac.uk
 Patrik Weiskircher	me@justp.at
 Paul Berrevoets		paul@swi.com
