@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -26,6 +26,7 @@ required=gcc
 set -e
 
 cat >> configure.in << 'END'
+AC_PREREQ(2.55)
 AC_PROG_CC
 AM_C_PROTOTYPES
 AC_PROG_RANLIB
@@ -58,7 +59,7 @@ main (int argc, char **argv)
 END
 
 $ACLOCAL
-$AUTOCONF
+$AUTOCONF || exit 77
 $AUTOMAKE -a
 
 ./configure am_cv_prog_cc_stdc=no
