@@ -1,5 +1,9 @@
 2003-03-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	Fix for PR automake/386:
+	* tests/ansi10.test: Require Autoconf 2.55.  Skip the test otherwise.
+	Reported by Owen Taylor.
+
 	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?GENERIC?%EXT%.obj)
 	(?GENERIC?%EXT%.lo): Use `mv -f' instead of `mv' in FASTDEP mode.
 	Suggested by Matthias Andree.
